fix modal by removing test-body-mobile z-index

--- a/static/css/layout/v2.less
+++ b/static/css/layout/v2.less
@@ -6,8 +6,6 @@
   background-color: @white;
   border-radius: 5px;
   border: 1px solid @dark-beige;
-  z-index: @z-index-level-1;
-  position: relative;
 }
 
 // stylelint-disable-next-line no-descending-specificity
